--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="title_calendar">Calendar</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_todolist">To-do List</string>
+    
+    <string-array name="priority">
+        <item>Choose priority</item>item
+        <item>Low</item>item>
+        <item>Medium</item>item>
+        <item>High</item>item>
+    </string-array>
 </resources>
