Updated To-do List To Adapt enum Task Priority Type
And solved the "Future OCP violation" from iteration 1's feedback.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,9 @@
     <string name="task_name">Task name</string>
     <string name="add">Add</string>
     <string-array name="priority">
-        <item>Choose priority</item>item
-        <item>Low</item>item>
-        <item>Medium</item>item>
-        <item>High</item>item>
+        <item>Choose priority</item>
+        <item>Low</item>
+        <item>Medium</item>
+        <item>High</item>
     </string-array>
 </resources>
