--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,10 @@
     <string name="time">Time</string>
     <string name="task_name">Task name</string>
     <string name="add">Add</string>
+    <string name="link1"><a href="www.khanacademy.org">Khan Academy</a></string>
+    <string name="link2"><a href="www.chegg.com">Chegg</a></string>
+    <string name="link3"><a href="www.youtube.com">Youtube</a></string>
+
     <string-array name="priority">
         <item>Choose priority</item>
         <item>Low</item>
