--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="time">Time</string>
     <string name="task_name">Task name</string>
     <string name="add">Add</string>
+    <string name="link1">https://www.google.ca</string>
+    <string name="link2">https://www.google.ca</string>
+    <string name="link3">https://www.google.ca</string>
     <string-array name="priority">
         <item>Choose priority</item>
         <item>Low</item>
