--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,10 @@
     <string name="link5"><a href="http://www.google.com">Google</a></string>
     <string name="link6"><a href="http://www.gather.town">Gather</a></string>
     <string name="link7"><a href="http://www.umlearn.ca">Umlearn</a></string>
-    <string name="link8"><a href="http://www.en.wikipedia.org">Wikipedia</a></string>
+    <string name="link8"><a href="http://www.en.wikipedia.org/wiki/Wiki">Wikipedia</a></string>
+    <string name="link9"><a href="http://www.quizlet.com">Quizlet</a></string>
+    <string name="link10"><a href="http://www.ocw.mit.edu/index.html">MIT OpenCourseWare</a></string>
+    <string name="link11"><a href="http://www.desmos.com">Desmos</a></string>
 
 
 
