--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,17 +14,17 @@
     <string name="task_name">Task name</string>
     <string name="add">Add</string>
 
-    <string name="link1"><a href="http://www.khanacademy.org">Khan Academy</a></string>
-    <string name="link2"><a href="http://www.chegg.com">Chegg</a></string>
-    <string name="link3"><a href="http://www.docs.google.com">Google Doc</a></string>
-    <string name="link4"><a href="http://www.youtube.com">Youtube</a></string>
-    <string name="link5"><a href="http://www.google.com">Google</a></string>
-    <string name="link6"><a href="http://www.gather.town">Gather</a></string>
-    <string name="link7"><a href="http://www.umlearn.ca">Umlearn</a></string>
-    <string name="link8"><a href="http://www.wikipedia.org">Wikipedia</a></string>
-    <string name="link9"><a href="http://www.quizlet.com">Quizlet</a></string>
-    <string name="link10"><a href="http://www.ocw.mit.edu/index.html">MIT OpenCourseWare</a></string>
-    <string name="link11"><a href="http://www.desmos.com">Desmos</a></string>
+    <string name="link_khan_academy"><a href="http://www.khanacademy.org">Khan Academy</a></string>
+    <string name="link_iclicker"><a href="https://app.reef-education.com/#/login">iClicker</a></string>
+    <string name="link_google_doc"><a href="http://www.docs.google.com">Google Doc</a></string>
+    <string name="link_youtube"><a href="http://www.youtube.com">Youtube</a></string>
+    <string name="link_crowdmark"><a href="https://app.crowdmark.com/sign-in">Crowdmark</a></string>
+    <string name="link_gather"><a href="http://www.gather.town">Gather</a></string>
+    <string name="link_umlearn"><a href="http://www.umlearn.ca">Umlearn</a></string>
+    <string name="link_wiki"><a href="http://www.wikipedia.org">Wikipedia</a></string>
+    <string name="link_quizlet"><a href="http://www.quizlet.com">Quizlet</a></string>
+    <string name="link_ocw"><a href="http://www.ocw.mit.edu/index.html">MIT OpenCourseWare</a></string>
+    <string name="link_desmos"><a href="http://www.desmos.com">Desmos</a></string>
 
 
     <string-array name="priority">
