--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,15 +40,15 @@
         <item>Lecture</item>
     </string-array>
     <string-array name="read">
-        <item>pages</item>
-        <item>words</item>
+        <item>Pages</item>
+        <item>Words</item>
     </string-array>
     <string-array name="homework">
-        <item>days</item>
-        <item>weeks</item>
+        <item>Days</item>
+        <item>Weeks</item>
     </string-array>
     <string-array name="lecture">
-        <item>minutes</item>
-        <item>hours</item>
+        <item>Minutes</item>
+        <item>Hours</item>
     </string-array>
 </resources>
