--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,11 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_todolist">To-do List</string>
     <string name="title_usefullinks">Useful Links</string>
+    <string name="title_update">Update</string>
+    <string name="title_view">Finished tasks</string>
+    <string name="title_tutorial">Tutorial</string>
     <string name="noEvent">No Upcoming Event</string>
-    <string name="please_insert_your_first_task">Please insert your first task</string>
+    <string name="welcome">Please insert your first task</string>
     <string name="todo">TODO</string>
     <string name="date">Date</string>
     <string name="priority">Priority</string>
@@ -38,6 +41,9 @@
         <item>Reading</item>
         <item>Homework</item>
         <item>Lecture</item>
+        <item>Lab</item>
+        <item>Term paper</item>
+        <item>Studying</item>
     </string-array>
     <string-array name="read">
         <item>Pages</item>
@@ -50,5 +56,18 @@
     <string-array name="lecture">
         <item>Minutes</item>
         <item>Hours</item>
+    </string-array>
+    <string-array name="lab">
+        <item>Labs</item>
+    </string-array>
+    <string-array name="paper">
+        <item>Pages</item>
+    </string-array>
+    <string-array name="study">
+        <item>Weeks</item>
+        <item>Modules</item>
+        <item>Flashcards</item>
+        <item>Pages</item>
+        <item>Words</item>
     </string-array>
 </resources>
